--- a/webflow/index.html
+++ b/webflow/index.html
@@ -20,8 +20,13 @@
 </head>
 <body>
   <div class="c2 w-container">
-    <h1 class="heading-2">Who&#x27;s connecting?</h1>
-    <div class="div-block-3"><a href="ma1.html" class="button w-button">Great MA</a><a href="#" class="button w-button">VIP Patient</a><a href="#" class="button w-button">Kind MD</a></div>
+    <h1 class="heading-2">To Where?</h1>
+    <div class="div-block-3">
+      <a href="ma1.php" class="button w-button">ma</a>
+      <a href="pt1.php" class="button w-button">pt</a>
+      <a href="md1.php" class="button w-button">md</a>
+      <a href="cbtext.php" class="button w-button">cbtext</a>
+    </div>
     <div class="div-block-2"></div>
   </div><img src="images/silver-iphone-6-near-blue-and-silver-stethoscope-48603.jpg" srcset="images/silver-iphone-6-near-blue-and-silver-stethoscope-48603-p-1080.jpeg 1080w, images/silver-iphone-6-near-blue-and-silver-stethoscope-48603-p-1600.jpeg 1600w, images/silver-iphone-6-near-blue-and-silver-stethoscope-48603-p-2000.jpeg 2000w, images/silver-iphone-6-near-blue-and-silver-stethoscope-48603-p-2600.jpeg 2600w, images/silver-iphone-6-near-blue-and-silver-stethoscope-48603-p-3200.jpeg 3200w, images/silver-iphone-6-near-blue-and-silver-stethoscope-48603.jpg 3888w" sizes="100vw" alt="" class="image">
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=5ea24fa4777920d17bd4218b" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
